[tool.poetry]
name = "pytest-minecraft"
version = "0.1.1"
description = "A pytest plugin for running tests against Minecraft releases"
authors = ["Valentin Berlier <berlier.v@gmail.com>"]
license = "MIT"

homepage = "https://github.com/vberlier/pytest-minecraft"
repository = "https://github.com/vberlier/pytest-minecraft"
documentation = "https://github.com/vberlier/pytest-minecraft"

readme = "README.md"

keywords = [
  "pytest-plugin",
  "minecraft",
  "datapack",
  "resourcepack",
  "testing"
]

classifiers = ["Framework :: Pytest"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.0.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
black = "^21.4b0"

[tool.poetry.plugins.pytest11]
minecraft = "pytest_minecraft"

[tool.black]
target-version = ["py38"]
include = "pytest_minecraft|tests"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
